Use post excerpt on tag pages

--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -4,6 +4,6 @@ layout: default
 
 <section id="posts">
   {% for post in page.posts %}
-    {% include post.html %}
+    {% include post_excerpt.html %}
   {% endfor %}
 </section>
