--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -3,6 +3,9 @@
     .thumbnail {
       margin-bottom: 20px;
     }
+    .excerpt {
+      padding-top: 40px;
+    }
   }
   #post-carousel {
     border-left-style: solid;
