Fix various small validation problems

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
         <h3 class="text-muted">
           Henne Vogelsang
         </h3>
-        <img src="/images/henne.png" class="img-responsive u-photo">
+        <img src="/images/henne.png" class="img-responsive u-photo" alt="Photo of Henne Vogelsang">
       </div>
       <div class='col-md-4'>
         <h3 class='text-muted'>full stack developer of the modern web</h3>
@@ -33,7 +33,7 @@
         </p>
         <p>
           My day job at
-          <a href="http://www.suse.com">SUSE.com</a>
+          <a href="https://www.suse.com">SUSE.com</a>
           is hacking, operating and maintaining the Linux distribution
           development platform
           <a href="http://openbuildservice.org">Open Build Service.</a>
