--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
           <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
             <img alt="Licensed CC-BY-SA of not otherwise expressed"
                  title="Licensed CC-BY-SA of not otherwise expressed"
-                 src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"
+                 src="//licensebuttons.net/l/by-sa/4.0/80x15.png"
             />
           </a>
           &middot;
