--- a/_includes/hacks.html
+++ b/_includes/hacks.html
@@ -125,7 +125,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-push-6">
-          <a href="http://opensuse.org"><img alt="openSUSE Linux" src="/images/hacks/opensuse.png" class="img-responsive">
+          <a href="https://www.opensuse.org"><img alt="openSUSE Linux" src="/images/hacks/opensuse.png" class="img-responsive">
           </a>
         </div>
         <div class="col-md-6 col-md-pull-6">
@@ -161,12 +161,11 @@
               <strong>
                 Online:
               </strong>
-              <a href="http://opensuse.org">http://opensuse.org</a>
+              <a href="https://www.opensuse.org">https://www.opensuse.org</a>
             </li>
           </ul>
         </div>
       </div>
     </div>
-  </div>
   </div>
 </section>
