--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,14 +9,14 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img src="/images/logo.png" id='logo'>
+        <img src="/images/logo.png" id='logo' alt="Logo">
       </a>
     </div>
     <div id="navbar-scroll" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/#about">About</a></li>
         <li><a href="/#hacks">Portfolio</a></li>
-        <li><a href="/blog">Blog</a></li>
+        <li><a href="/blog/">Blog</a></li>
       </ul>
     </div>
   </div>
