Use the asset tags

--- a/_includes/hacks.html
+++ b/_includes/hacks.html
@@ -10,7 +10,8 @@
     <div class="container">
       <div class="row">
           <div class="col-md-6 col-md-push-6">
-            <a href="http://osem.io"><img alt="Open Source Event Manager" src="/images/hacks/osem.jpg" class="img-responsive">
+            <a href="http://osem.io">
+              {% image 'hacks/osem.jpg' alt:'A screenshot of the Open Source Event Manager Interface' class:'img-responsive' %}
             </a>
           </div>
           <div class="col-md-6 col-md-pull-6">
@@ -66,7 +67,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <a href="http://openbuildservice.org"><img alt="Open Build Service" src="/images/hacks/obs.jpg" class="img-responsive">
+          <a href="http://openbuildservice.org">
+            {% image 'hacks/obs.jpg' alt:'A screenshot of the Open Build Service Interface' class:'img-responsive' %}
           </a>
         </div>
         <div class="col-md-6">
@@ -125,7 +127,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-push-6">
-          <a href="https://www.opensuse.org"><img alt="openSUSE Linux" src="/images/hacks/opensuse.png" class="img-responsive">
+          <a href="https://www.opensuse.org">
+            {% image 'hacks/opensuse.png' alt:'A screenshot of the openSUSE web page' class:'img-responsive' %}
           </a>
         </div>
         <div class="col-md-6 col-md-pull-6">
