--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img src="/images/logo.png" id='logo' alt="Logo">
+        {% image logo.png alt:'Logo' id:'logo' %}
       </a>
     </div>
     <div id="navbar-scroll" class="collapse navbar-collapse">
