--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
         <h3 class="text-muted">
           Henne Vogelsang
         </h3>
-        <img src="/images/henne.png" class="img-responsive u-photo" alt="Photo of Henne Vogelsang">
+        {% image 'henne.png' alt:'A headshot of Henne Vogelsang' class:'img-responsive u-photo' %}
       </div>
       <div class='col-md-4'>
         <h3 class='text-muted'>full stack developer of the modern web</h3>
