--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <title>hennevogel</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    {% stylesheet application %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
     <meta name="theme-color" content="#000000">
@@ -30,7 +30,7 @@
       <script type="text/javascript">
         // content selector is used to extract the additional items
         $('.jscroll').jscroll({
-          loadingHtml: '<p class="text-center"><img src="/images/loader.gif" alt="Loading" /></p>',
+          loadingHtml: '<p class="text-center">{% image 'loader.gif' alt:'Loading' %}</p>',
           contentSelector: "#posts",
           nextSelector: '.next:last',
           debug: true
