Move all the assets to the assets folder

--- a/_assets/css/_hero.scss
+++ b/_assets/css/_hero.scss
@@ -6,7 +6,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("/images/schlepper.jpg");
+  background-image: url(image_path("schlepper.jpg"));
   overflow: hidden;
   display: block;
   width: 100%;
