--- a/_assets/css/application.scss
+++ b/_assets/css/application.scss
@@ -1,5 +1,3 @@
----
----
 @charset "utf-8";
 @import 'fonts';
 
@@ -10,10 +8,10 @@ $brand-success: #5cb85c;
 $brand-info: #5bc0de;
 $brand-warning: #f0ad4e;
 $brand-danger: #d9534f;
-$icon-font-path: "/fonts/";
 $navbar-height: 80px;
 $footer-height: 400px;
 
+@import 'bootstrap-sprockets';
 //
 // Bootstrap components
 //
@@ -24,7 +22,7 @@ $footer-height: 400px;
 // Reset and dependencies
 @import "bootstrap/normalize";
 @import "bootstrap/print";
-@import "bootstrap/glyphicons";
+// @import "bootstrap/glyphicons";
 
 // Core CSS
 @import "bootstrap/scaffolding";
