--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="theme-color" content="#000000">
+    <meta charset="utf-8"/>
   </head>
 
   <body data-spy="scroll" data-target="#navbar-scroll">
