--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
     <link rel="mask-icon" href="/favicons-2016-04-13/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="/favicons-2016-04-13/mstile-144x144.png">
+    <meta name="google-site-verification" content="9Bbk0dYjnw6bD2p0FiTPrWgoag3Oz40-AABKeRIblO0" />
   </head>
 
   <body data-spy="scroll" data-target="#navbar-scroll">
