--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,6 +17,15 @@
         <li><a href="/#about">About</a></li>
         <li><a href="/#hacks">Portfolio</a></li>
         <li><a href="/blog/">Blog</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Search</a>
+          <ul class="dropdown-menu">
+            <form class="navbar-form" role="search" action="http://duckduckgo.com/" id="search" method="get">
+              <input type="hidden" value="hennevogel.de" name="sites">
+              <input type="text" class="form-control" placeholder="Search" name="q">
+            </form>
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
