--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,34 +11,13 @@
         {% endif %}
       {% endif %}
     </title>
-    {% if page.description %}
-      <meta name="description" content="{{ page.description}}" />
-    {% endif %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% stylesheet application %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
-    <meta name="theme-color" content="#000000">
-    <link rel="apple-touch-icon" sizes="57x57" href="/favicons-2016-04-13/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/favicons-2016-04-13/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/favicons-2016-04-13/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/favicons-2016-04-13/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/favicons-2016-04-13/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/favicons-2016-04-13/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/favicons-2016-04-13apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/favicons-2016-04-13/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicons-2016-04-13/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" href="/favicons-2016-04-13/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicons-2016-04-13/favicon-194x194.png" sizes="194x194">
-    <link rel="icon" type="image/png" href="/favicons-2016-04-13/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/favicons-2016-04-13/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/favicons-2016-04-13/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/favicons-2016-04-13/manifest.json">
-    <link rel="mask-icon" href="/favicons-2016-04-13/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-TileImage" content="/favicons-2016-04-13/mstile-144x144.png">
-    <meta name="google-site-verification" content="9Bbk0dYjnw6bD2p0FiTPrWgoag3Oz40-AABKeRIblO0" />
+    {% include favicon.html %}
+    {% include opengraph.html %}
   </head>
 
   <body data-spy="scroll" data-target="#navbar-scroll">
