Use SSL for DDG

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -20,7 +20,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Search</a>
           <ul class="dropdown-menu">
-            <form class="navbar-form" role="search" action="http://duckduckgo.com/" id="search" method="get">
+            <form class="navbar-form" role="search" action="https://duckduckgo.com/" id="search" method="get">
               <input type="hidden" value="hennevogel.de" name="sites">
               <input type="text" class="form-control" placeholder="Search" name="q">
             </form>
