Blog about OSEM on Heroku

--- a/_assets/css/_post.scss
+++ b/_assets/css/_post.scss
@@ -55,6 +55,10 @@
     }
   }
 
+  .img{
+    padding: 40px 0 40px 0;
+  }
+
   @media (min-width: $screen-xs-min) {
     #post-title {
       bottom: 132px;
