Add imprint & privacy policy. GDPR...

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,6 +39,10 @@
           <a href="https://github.com/hennevogel/hennevogel.de/issues">
             Feedback
           </a>
+          &middot;
+          <a href="/impressum">
+            Impressum
+          </a>
         </p>
       </div>
     </div>
