Adopt code to jekyll-assets > 3

--- a/_assets/css/application.scss
+++ b/_assets/css/application.scss
@@ -76,7 +76,7 @@ body {
 }
 
 section {
-  padding: $navbar-height 0 $navbar-height 0;
+  padding: 60px 0 60px 0;
 }
 
 @media (min-width: $screen-sm-min ) and (max-width: $screen-sm-max) {
