--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
         <h3 class="text-muted">
           Henne Vogelsang
         </h3>
-        {% image 'henne.png' alt:'A headshot of Henne Vogelsang' class:'img-responsive u-photo' %}
+        {% asset 'henne.png' alt='A headshot of Henne Vogelsang' class='img-responsive u-photo' %}
       </div>
       <div class='col-md-4'>
         <h3 class='text-muted'>full stack developer of the modern web</h3>
