--- a/_includes/hacks.html
+++ b/_includes/hacks.html
@@ -11,7 +11,7 @@
       <div class="row">
           <div class="col-md-6 col-md-push-6">
             <a href="http://osem.io">
-              {% image 'hacks/osem.png' alt:'A screenshot of the Open Source Event Manager Interface' class:'img-responsive' %}
+              {% asset 'hacks/osem.png' alt='A screenshot of the Open Source Event Manager Interface' class='img-responsive' %}
             </a>
           </div>
           <div class="col-md-6 col-md-pull-6">
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="col-md-6">
           <a href="http://openbuildservice.org">
-            {% image 'hacks/obs.png' alt:'A screenshot of the Open Build Service Interface' class:'img-responsive' %}
+            {% asset 'hacks/obs.png' alt='A screenshot of the Open Build Service Interface' class='img-responsive' %}
           </a>
         </div>
         <div class="col-md-6">
@@ -128,7 +128,7 @@
       <div class="row">
         <div class="col-md-6 col-md-push-6">
           <a href="https://www.opensuse.org">
-            {% image 'hacks/opensuse.png' alt:'A screenshot of the openSUSE web page' class:'img-responsive' %}
+            {% asset 'hacks/opensuse.png' alt='A screenshot of the openSUSE web page' class='img-responsive' %}
           </a>
         </div>
         <div class="col-md-6 col-md-pull-6">
