Add some more line height to posts
Text heavy posts are easier to read then.

--- a/_assets/css/typography.scss
+++ b/_assets/css/typography.scss
@@ -18,6 +18,7 @@ $ms-range:
 #post {
   p {
     @include ms-respond(font-size, 1);
+    line-height: 1.7;
   }
   h1 {
     @include ms-respond(font-size, 8);
