--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -34,7 +34,7 @@
 {% endif %}
 
 {% if page.image %}
-  <meta content="{% asset "posts/{{ page.image }}" %}" property="og:image">
+  <meta content="{% asset "posts/{{ page.image }}" @path %}" property="og:image">
 {% else %}
   <meta content="https://s.gravatar.com/avatar/9767aae13b5dc5bae57766bd5ad32421?s=400" property="og:image">
 {% endif %}
