Add influxdb-rails to my portfolio

--- a/_includes/hacks.html
+++ b/_includes/hacks.html
@@ -30,7 +30,7 @@
                 <strong>
                   Role:
                 </strong>
-                Developer, Project Manager
+                Lead Developer
               </li>
               <li>
                 <strong>
@@ -54,9 +54,16 @@
               </li>
               <li>
                 <strong>
+                  Github:
+                </strong>
+                <a href="https://github.com/openSUSE/osem">openSUSE/osem</a>
+              </li>
+              <li>
+                <strong>
                   Online:
                 </strong>
-                <a href="http://osem.io">http://osem.io</a>
+                <a href="http://osem.io">osem.io</a>,
+                <a href="http://demo.osem.io">Demo Instance</a>
               </li>
             </ul>
           </div>
@@ -73,22 +80,21 @@
         </div>
         <div class="col-md-6">
           <h2>
-            Open Build Service - Software build system
+            Open Build Service - Software Release Engineering System
           </h2>
           <hr>
           <p>
-            A generic system to build and distribute Linux binaries from source code
-            in an automatic, consistent and reproducible way. Helps Free Software
-            developers to ship applications as well as updates, appliances and entire
-            distributions for a wide range of Linux operating systems and hardware
-            architectures. I am responsible for the ruby on rails part.
+            Helps Free Software developers with the compilation, assembly, and delivery of source code into finished products
+            for a wide range of Linux operating systems and hardware architectures. I am responsible for the Ruby on Rails backend
+            and frontend (UI/API). I also contribute to many other aspects of this project. Like developer relations &amp; marketing,
+            writing documentation, operations of the reference server etc.
           </p>
           <ul>
             <li>
               <strong>
                 Role:
               </strong>
-              Full Stack Developer
+              Lead Developer, Operations
             </li>
             <li>
               <strong>
@@ -100,7 +106,7 @@
               <strong>
                 Technology:
               </strong>
-              Ruby on Rails, JQuery, SQL, Minitest, Perl, Bash
+              Ruby on Rails, Bootstrap, SQL, rspec, OCI Container
             </li>
             <li>
               <strong>
@@ -114,9 +120,16 @@
             </li>
             <li>
               <strong>
+                Github:
+              </strong>
+              <a href="https://github.com/openSUSE/open-build-service">openSUSE/open-build-service</a>
+            </li>
+            <li>
+              <strong>
                 Online:
               </strong>
-              <a href="http://openbuildservice.org">http://openbuildservice.org</a>
+              <a href="http://openbuildservice.org">openbuildservice.org</a>,
+              <a href="https://build.opensuse.org">Reference Server</a>
             </li>
           </ul>
         </div>
@@ -127,13 +140,68 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-push-6">
-          <a href="https://www.opensuse.org">
-            {% asset 'hacks/opensuse.png' alt='A screenshot of the openSUSE web page' class='img-responsive' %}
+          <a href="https://rubygems.org/gems/influxdb-rails">
+            {% asset 'hacks/influxdb-rails.png' alt='A screenshot of a influxdb-rails dashboard' class='img-responsive' %}
           </a>
         </div>
         <div class="col-md-6 col-md-pull-6">
           <h2>
-            openSUSE
+            influxdb-rails - Application Performance Metrics
+          </h2>
+          <hr>
+          <p>
+            A RubyGem that helps people to track performance and health of Ruby on Rails applications. By writing metrics into a time series database
+            (InfluxDB) and providing dashboards (Grafana) to visualize those metrics.
+          </p>
+          <ul>
+            <li>
+              <strong>
+                Roles:
+              </strong>
+              Lead Developer
+            </li>
+            <li>
+              <strong>
+                Technology:
+              </strong>
+              Ruby, InfluxDB, Grafana
+            </li>
+            <li>
+              <strong>
+                Customer:
+              </strong>
+              <a href="https://www.suse.com/">SUSE</a>,
+              <a href="https://www.opensuse.org/">openSUSE</a>
+            </li>
+            <li>
+              <strong>
+                Github:
+              </strong>
+              <a href="https://github.com/influxdata/influxdb-rails">influxdata/influxdb-rails</a>
+            </li>
+            <li>
+              <strong>
+                Online:
+              </strong>
+              <a href="https://rubygems.org/gems/influxdb-rails">Rubygems</a>,
+              <a href="https://obs-measure.opensuse.org/d/influxdb-rails-overview/performance?orgId=1&refresh=5m">Reference Dashboards</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="hack">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <a href="https://www.opensuse.org">
+            {% asset 'hacks/opensuse.png' alt='A screenshot of the openSUSE web page' class='img-responsive' %}
+          </a>
+        </div>
+        <div class="col-md-6">
+          <h2>
+            openSUSE - Linux Operating System
           </h2>
           <hr>
           <p>
@@ -142,7 +210,7 @@
             browsing facebook to developing complex applications.
             I was part of the group of engineers that launched this
             community in 2005 and I'm still a member with various roles today. I maintain
-            software packages that are included in the OS, I administer several
+            software packages that are included in the OS, I operate several
             servers/applications that the project utilizes and I contribute to the promotion
             by writing, speaking and evangelizing about it.
           </p>
@@ -151,20 +219,19 @@
               <strong>
                 Roles:
               </strong>
-              Developer, Admin, Community Manager, Editor
+              Developer, Operation, Developer Relations, Editor
             </li>
             <li>
               <strong>
                 Technology:
               </strong>
-              Linux, Apache, Postfix, Wordpress, Mediawiki, RPM, Open Build Service,
-              Chef, Github, IRC, Bugzilla
+              Linux, Apache, Postfix, Wordpress, Mediawiki, Open Build Service, OSEM
             </li>
             <li>
               <strong>
                 Online:
               </strong>
-              <a href="https://www.opensuse.org">https://www.opensuse.org</a>
+              <a href="https://www.opensuse.org">opensuse.org</a>
             </li>
           </ul>
         </div>
