Adopt about to emphasize management

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,37 +15,36 @@
         {% asset 'henne.png' alt='A headshot of Henne Vogelsang' class='img-responsive u-photo' %}
       </div>
       <div class='col-md-4'>
-        <h3 class='text-muted'>full stack developer of the modern web</h3>
+        <h3 class='text-muted'>Engineering Manager &amp; Full Stack Web Developer </h3>
         <p class="p-note">
-          I express my apps business values in RSpec, capture it's behaviour in
-          Ruby on Rails models and help Humans to interact with it's data through mobile first,
-          responsive and progressive enhanced HTML5, CSS3 and JavaScript driven user interfaces.
-        </p>
-        <p>
-          For more than a decade I am a rigorous practitioner of Free Software development.
-          I love the raw power of communities collaborating and I believe that everyone
-          should be able to run, copy, distribute, study, change and improve the software that is
-          <del>
-            eating
-          </del>
-          &nbsp;
-          running the world.
+          I'm a software engineering manager helping people to realize their full potential. For the good of the business and
+          for themselves. I am also a developer of the modern web. And for more than a decade I am a rigorous practitioner of
+          Free Software development.
         </p>
         <p>
           My day job at
           <a href="https://www.suse.com">SUSE.com</a>
-          is hacking, operating and maintaining the Linux distribution
-          development platform
+          is hacking, operating and maintaining the Linux release engineering platform
           <a href="http://openbuildservice.org">Open Build Service.</a>
-          A massive Ruby on Rails/Perl application.
         </p>
         <p>
-          In my spare time I practice my skills by developing an event organization app, the
-          <a href="http://osem.io">Open Source Event Manager</a>,
-          by operating a lot of the server infrastructure of the
-          <a href="http://opensuse.org">openSUSE project</a>,
-          and by teaching free software development with programs such as
-          <a href="http://railsgirlssummerofcode.org/">RailsGirls Summer of Code</a>.
+          I lead by generating shared understanding about the needs, goals and limitations of customers,
+          the business and peers. I have confidence in introspection to detect undesirable process, technical and personal
+          variances. And I believe it needs a diverse set of people to produce any meaningful product.
+        </p>
+        <p>
+          When hacking, I express my applications business values in RSpec. Capture the apps behavior in Ruby on Rails.
+          And help humans to interact with it's data through mobile first, responsive and progressively enhanced HTML5, CSS3 and
+          JavaScript driven user interfaces.
+        </p>
+        <p>
+          I love the raw power of communities collaborating. I consider it vital that everyone is able to run, copy, distribute,
+          study, change and improve the software that is running the world.
+        </p>
+        <p>
+          In my space time I hone my skills by hacking a library to instrument Ruby on Rails applications. Leading an Open Source
+          project that is producing a conference organization app. And by teaching free software development with programs like
+          <a href="http://railsgirlssummerofcode.org/">RailsGirls Summer of Code</a>
         </p>
       </div>
       <div class='col-md-4'>
