--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
 
     {% include footer.html %}
 
-    <script type="text/javascript" src="//oss.maxcdn.com/jquery/2.1.4/jquery.min.js"></script>
-    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="//oss.maxcdn.com/chart.js/1.0.2/Chart.min.js"></script>
-    <script type="text/javascript" src="//oss.maxcdn.com/jquery.jscroll/2.2.4/jquery.jscroll.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/chart.js@1.1.1/Chart.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/jscroll@2.4.1/jquery.jscroll.min.js"></script>
     {% if page.path == 'index.html' %}
       <script type="text/javascript" src="/js/chart.js"></script>
     {% endif %}
